Add jeera rice page, and add recipe links to index

--- a/recipes/rajma-masala.html
+++ b/recipes/rajma-masala.html
@@ -51,5 +51,7 @@
             <li>Add the kasuri methi.</li>
             <li>Switch off the heat and add coriander leaves.</li>
         </ol>
+
+        <p><a href="../index.html">Back to Index</a></p>
     </body>
 </html>
