--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/rajma-masala.html">Rajma Masala</a>
+        <ul>
+            <li><a href="recipes/rajma-masala.html">Rajma Masala</a></li>
+            <li><a href="recipes/jeera-rice.html">Jeera Rice</a></li>
+        </ul>
     </body>
 </html>
