--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li><a href="recipes/rajma-masala.html">Rajma Masala</a></li>
             <li><a href="recipes/jeera-rice.html">Jeera Rice</a></li>
+            <li><a href="recipes/cucumber-raita.html">Cucumber Raita</a></li>
         </ul>
     </body>
 </html>
