--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <img src="https://images.saymedia-content.com/.image/t_share/MTc0Mzg2NDA4MDI1MjM2ODQw/animes-like-shokugeki-no-soma.jpg" width="600px" alt="Still from Shokugeki no Soma of a man cooking furiously">
         <ul>
             <li><a href="recipes/rajma-masala.html">Rajma Masala</a></li>
             <li><a href="recipes/jeera-rice.html">Jeera Rice</a></li>
